<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

	<TabWidget android:id="@android:id/tabs"
		android:layout_width="fill_parent" android:layout_weight="1"
		android:layout_gravity="top" android:layout_height="wrap_content" />
	<FrameLayout android:id="@android:id/tabcontent"
		android:layout_width="fill_parent" android:layout_weight="1"
		android:layout_height="fill_parent" android:paddingTop="40px">
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/cc_tabview1" android:layout_height="fill_parent">
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="match_parent" android:baselineAligned="true">
				<TextView android:textSize="16dip" android:id="@+id/cc_numb_text" android:layout_height="wrap_content" android:text="@string/NUMB" android:layout_width="wrap_content"></TextView>
				<TextView android:textSize="16dip" android:id="@+id/cc_numb" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content"></TextView>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:layout_width="match_parent">
				<TextView android:textSize="16dip" android:id="@+id/cc_date_text" android:layout_height="wrap_content" android:text="@string/DATA" android:layout_width="wrap_content"></TextView>
				<TextView android:textSize="16dip" android:id="@+id/cc_date" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content"></TextView>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout5" android:layout_width="match_parent">
				<TextView android:textSize="16dip" android:id="@+id/cc_cardname_text" android:layout_height="wrap_content" android:text="@string/CC_NAME" android:layout_width="wrap_content"></TextView>
				<Spinner android:fitsSystemWindows="true" android:layout_height="wrap_content" android:id="@+id/spCardName" android:layout_weight="1" android:layout_width="match_parent" android:minHeight="20dip"></Spinner>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout6" android:layout_width="match_parent">
				<TextView android:id="@+id/cc_clientname_text" android:layout_height="wrap_content" android:text="@string/PARTNER" android:layout_width="wrap_content"></TextView>
				<TextView android:id="@+id/cc_clientname" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="18dip"></TextView>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout9" android:layout_width="match_parent" 
android:layout_height="wrap_content" android:orientation="vertical">
<TextView android:id="@+id/textView5" android:text="@string/prim" 
android:layout_height="wrap_content" android:layout_width="wrap_content">
</TextView>
<EditText android:layout_height="wrap_content" android:layout_width="match_parent" 
android:layout_weight="1" android:id="@+id/etPrim" android:textSize="10dip">
</EditText>
</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:layout_marginTop="20px" android:id="@+id/linearLayout8" android:layout_width="match_parent">
				<Button android:text="@string/SEND" android:layout_height="wrap_content" android:id="@+id/bSendCard" android:layout_width="wrap_content"></Button>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/cc_tabview2" android:layout_height="fill_parent">
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout7" android:layout_width="match_parent" android:gravity="center_vertical">
				<ToggleButton android:textOn="Все" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="ToggleButton" android:textOff="Кат" android:id="@+id/tb_CatAll"></ToggleButton>
				<Spinner android:layout_height="wrap_content" android:id="@+id/spgrTov" android:layout_width="match_parent"></Spinner>
			</LinearLayout>
			<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/LinearLayout03" android:layout_width="match_parent">
				<LinearLayout android:layout_height="match_parent" android:id="@+id/LinearLayout01" android:layout_weight="1" android:layout_width="match_parent">
					<TextView android:textSize="10dip" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/TOVAR" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
				<LinearLayout android:layout_height="match_parent" android:id="@+id/LinearLayout02" android:layout_weight="1" android:layout_width="150dip">
					<TextView android:textSize="10dip" android:layout_weight="0" android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/avail" android:layout_width="wrap_content"></TextView>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/LinearLayout04" android:layout_width="match_parent">
				<TextView android:textSize="10dip" android:paddingRight="20px" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/OST" android:layout_width="70dip"></TextView>
				<TextView android:textSize="10dip" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="@string/ZAKAZ" android:layout_width="60dip"></TextView>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_weight="1" android:layout_width="match_parent">
				<ListView android:layout_height="match_parent" android:id="@+id/cc_data_listView" android:layout_width="match_parent"></ListView>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">
				<ToggleButton android:textOn="Все" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/cc_card_alltov" android:text="ToggleButton" android:textOff="Ост"></ToggleButton>
			</LinearLayout>
		</LinearLayout>
	</FrameLayout>
</TabHost>
