<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent">
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout4" android:layout_height="wrap_content">
            <LinearLayout android:id="@+id/linearLayout6" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="match_parent">
                <TextView android:layout_width="wrap_content" android:text="@string/TOVAR" android:layout_height="wrap_content" android:id="@+id/cc_data_tovname"></TextView>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearLayout7" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="150dip">
                <TextView android:layout_weight="0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/avail" android:id="@+id/cc_data_avail"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout5" android:layout_height="wrap_content">
            <TextView android:text="@string/OST" android:layout_height="wrap_content" android:paddingRight="20px" android:id="@+id/cc_data_ost" android:layout_width="70dip"></TextView>
            <TextView android:text="@string/ZAKAZ" android:layout_height="wrap_content" android:id="@+id/cc_data_zakaz" android:layout_width="60dip"></TextView>
            <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/cc_data_tovid" android:visibility="invisible"></TextView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content"></LinearLayout>
    </LinearLayout>
