<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:id="@+id/linearLayout1" android:orientation="vertical">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout2">
        <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/MANAGER_ID" android:layout_width="wrap_content"></TextView>
        <EditText android:layout_height="wrap_content" android:text="EditText" android:id="@+id/eT_managerId" android:layout_width="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3">
        <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/SURNAME" android:layout_width="wrap_content"></TextView>
        <EditText android:layout_height="wrap_content" android:text="EditText" android:id="@+id/eT_Surname" android:layout_width="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout4" android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/linearLayout5" android:layout_height="match_parent" android:layout_width="match_parent"
            android:gravity="center_vertical|center">
            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btOk" android:text="@string/btn_ok"></Button>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout6" android:layout_height="match_parent" android:layout_width="100px">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
