<?xml version="1.0" encoding="utf-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TabWidget android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:tabStripEnabled="false"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <FrameLayout android:id="@android:id/tabcontent"
                android:layout_width="match_parent" android:layout_weight="1"
                android:layout_height="match_parent" android:paddingTop="20px">

                <LinearLayout android:orientation="vertical"
                    android:layout_height="fill_parent" android:layout_width="fill_parent"
                    android:id="@+id/tabview1">
                    <LinearLayout android:orientation="vertical"
                        android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:gravity="center_horizontal" android:id="@+id/linearLayout1">
                        <LinearLayout android:layout_width="match_parent"
                            android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
                            android:id="@+id/linearLayout2">
                            <TextView android:text="@string/ZAKAZN"
                                android:layout_gravity="center_vertical" android:id="@+id/textView1"
                                android:gravity="center_vertical" android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20dp"></TextView>
                            <TextView android:text="TextView" android:id="@+id/sTVZakaznumb"
                                android:layout_width="wrap_content" android:textSize="25dp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="20dp"
                                android:layout_gravity="center_vertical"></TextView>
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/linearLayout3">
                            <TextView android:text="@string/ZAKAZ_DATE" android:id="@+id/textView2"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:textSize="20dp"
                                android:layout_gravity="center_vertical"></TextView>
                            <TextView android:text="TextView" android:id="@+id/sTVZakazdate"
                                android:layout_width="wrap_content" android:textSize="25dp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="20dp"
                                android:layout_gravity="center_vertical"></TextView>
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/linearLayout4"
                            android:textAlignment="center">
                            <TextView android:text="@string/ZAKAZ_FIRMA" android:id="@+id/textView3"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="20dp"></TextView>
                            <Spinner android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/sSpFirma"
                                android:dropDownWidth="match_parent"
                                android:layout_weight="9"
                                android:spinnerMode="dropdown"></Spinner>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/SKIDKA"
                                android:textSize="20dp"
                                android:layout_weight="1" />

                            <Spinner
                                android:id="@+id/sSpSkidka"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="9" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/linearLayout5"
                                android:weightSum="1"
                                android:orientation="horizontal">

                                <TextView android:text="@string/ZAKAZ_CLIENT" android:id="@+id/textView4"
                                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                                    android:textSize="18dp"
                                    android:layout_gravity="top"></TextView>

                                <Button android:textSize="8dp" android:id="@+id/sBtZkazClient"
                                    android:text="..." android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.06"
                                    android:textAlignment="center"
                                    android:width="40dp"
                                    android:height="40dp"></Button>
                            </LinearLayout>

                            <TextView android:text="лоывардвыолдф ывдлаор лвоа дыв" android:id="@+id/zakazclient"
                                android:layout_width="wrap_content" android:textSize="22sp"
                                android:layout_height="wrap_content"></TextView>

                        </LinearLayout>

                        <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/linearLayout7"
                            android:paddingTop="20dp">
                            <TextView android:text="@string/ZAKAZ_SUMMA" android:id="@+id/textView5"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:textSize="18dp"></TextView>
                            <TextView android:text="TextView" android:id="@+id/zakazsumma"
                                android:layout_width="wrap_content" android:textSize="26sp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="20dp"></TextView>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/linearLayout9"
                        android:weightSum="1">
                        <Button android:id="@+id/sBTSend" android:text="Отправить"
                            android:layout_width="100dip" android:layout_height="100dip"
                            android:layout_weight="0.24"></Button>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:orientation="vertical"
                    android:layout_height="fill_parent" android:layout_width="fill_parent"
                    android:id="@+id/tabview2">
                    <LinearLayout android:id="@+id/linearLayout8"
                        android:layout_width="match_parent" android:layout_height="wrap_content">
                        <Button android:id="@+id/sBtAddTov" android:text="+"
                            android:layout_height="wrap_content" android:layout_width="wrap_content"
                            android:layout_weight="1"></Button>
                        <Spinner android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/sSGroupTov"
                            android:layout_weight="6"></Spinner>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ibOrderSearchBtn"
                            android:src="@drawable/ic_menu_search"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/linearLayout6">
                        <ListView android:layout_width="match_parent" android:id="@+id/listTorder"
                            android:layout_height="wrap_content"></ListView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:layout_height="fill_parent"
                    android:id="@+id/tabview3" android:orientation="vertical"
                    android:layout_width="fill_parent">
                    <TextView android:text="@string/prim" android:layout_height="wrap_content"
                        android:layout_width="wrap_content" android:id="@+id/textView6"></TextView>
                    <EditText android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:text="EditText"
                        android:id="@+id/eTZakazPrim"></EditText>
                </LinearLayout>

            </FrameLayout>
        </ScrollView>

    </LinearLayout>
</TabHost>
